Fixed routes table not working due to overlapping Datatables classes, for some reason. More fixes to FF not displaying the table correctly. Works now.

--- a/resources/assets/css/custom.css
+++ b/resources/assets/css/custom.css
@@ -251,8 +251,11 @@
     text-overflow: ellipsis;
     white-space: nowrap;
 }
-@media (max-width: 12450px) {
 
+@media (max-width: 600px) {
+    #routes_table .limit_width {
+        max-width: 200px;
+    }
 }
 
 /** INTRO.JS */
